[Blacklist] Strange overflow issue

--- a/app/javascript/src/styles/common/blacklists.scss
+++ b/app/javascript/src/styles/common/blacklists.scss
@@ -65,7 +65,8 @@
         from, to { overflow: hidden; } 
       }
       animation: hide-scroll 0.25s backwards;
-      overflow: hidden auto;
+      overflow-x: hidden;
+      overflow-y: auto;
     }
   }
 
